# cookiecutter-pybind

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt  setup.py
app/: matrix.py
include/: math.h  matrix.h
src/: interface.cpp  math.cpp
test/: test.py
